# hello-gl2

./: README.md  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  support_ndk.c  support_ndk.h
app/src/main/cpp/gl-shared/: GLApplication.c  SampleList.c  SampleList.h
app/src/main/cpp/gl-shared/samples/chapter05/: sample_clear.c  sample_random_clear.c  sample_skelton.c
app/src/main/cpp/gl-shared/samples/chapter06/: sample_rendering_triangle.c  sample_rendering_triangle_function.c  sample_rendering_triangle_noviewport.c
app/src/main/cpp/gl-shared/samples/chapter07/: sample_rendering_line.c  sample_rendering_point.c  sample_rendering_quad.c
app/src/main/cpp/gl-shared/samples/chapter08/: sample_shader_uniform_color.c  sample_shader_uniform_pos.c  sample_shader_varying_color.c
app/src/main/cpp/gl-shared/samples/chapter09/: sample_load_texture.c
app/src/main/cpp/gl-shared/samples/chapter10/: sample_load_texture_uvrange.c  sample_texture_op_filter_mag.c  sample_texture_op_filter_min.c  sample_texture_op_mipmap_GL_LINEAR_MIPMAP_LINEAR.c  sample_texture_op_mipmap_GL_LINEAR_MIPMAP_LINEAR_ex.c  sample_texture_op_mipmap_GL_LINEAR_MIPMAP_LINEAR_ex2.c  sample_texture_op_mipmap_GL_LINEAR_MIPMAP_NEAREST.c  sample_texture_op_mipmap_GL_NEAREST_MIPMAP_LINEAR.c  sample_texture_op_mipmap_GL_NEAREST_MIPMAP_NEAREST.c  sample_texture_op_mipmap_gen.c  sample_texture_op_npot.c  sample_texture_op_npot_auto.c  sample_texture_op_npot_auto_repeat.c  sample_texture_op_npot_repeat.c  sample_texture_op_wrap_clamp.c  sample_texture_op_wrap_mirrored_repeat.c  sample_texture_op_wrap_repeat.c
app/src/main/cpp/gl-shared/samples/chapter11/: sample_load_texture_2unit.c  sample_load_texture_channels.c  sample_load_texture_function.c  sample_texture_use_2.c
app/src/main/cpp/gl-shared/samples/chapter12/: sample_rendering_pixel_quad.c  sample_rendering_pixel_quad_direct_tex.c  sample_rendering_pixel_quad_pixel_uv_1px.c  sample_rendering_textureatlas.c
app/src/main/cpp/gl-shared/samples/chapter13/: sample_rendering_matrix_mult_trs.c  sample_rendering_matrix_rotate.c  sample_rendering_matrix_rotate2.c  sample_rendering_matrix_scale.c  sample_rendering_matrix_scale2.c  sample_rendering_matrix_srt.c  sample_rendering_matrix_srt_transpose.c  sample_rendering_matrix_srt_transpose_notsupport.c  sample_rendering_matrix_translate.c  sample_rendering_matrix_trs.c
app/src/main/cpp/gl-shared/samples/chapter14/: sample_rendering_matrix_sprite.c  sample_rendering_matrix_sprite_pos_function.c  sample_rendering_matrix_sprite_uv.c  sample_rendering_matrix_sprite_uv_function.c  sample_rendering_matrix_spriterotate.c  sample_rendering_matrix_spriterotate_aspect.c
app/src/main/cpp/gl-shared/samples/chapter15/: sample_blend_enable.c  sample_load_compress_texture_etc1_ktx.c  sample_load_compress_texture_etc1_pkm.c  sample_load_compress_texture_pvr_pvrtc.c
app/src/main/cpp/gl-shared/support/: support.c  support.h  support_RawData.c  support_RawData.h  support_gl.c  support_gl.h  support_gl_CompressedTexture.h_  support_gl_CompressedTexture_KtxImage.c  support_gl_CompressedTexture_PkmImage.c  support_gl_CompressedTexture_PvrtcImage.c  support_gl_Shader.c  support_gl_Shader.h  support_gl_Sprite.c  support_gl_Sprite.h  support_gl_Texture.c  support_gl_Texture.h  support_gl_Texture_RawPixelImage.c  support_gl_Vector.c  support_gl_Vector.h
app/src/main/cpp/impl/: ES20App_impl.c  ES20_impl.c  NDKApplication_impl.c  RawData_impl.c  RawPixelImage_impl.c  signatures.h
app/src/main/java/com/android/gl2jni/: MenuActivity.java  RenderingActivity.java  SampleList.java  Util.java
app/src/main/java/com/android/gl2jni/app/: GLApplication.java  RenderingThread.java
app/src/main/java/com/android/gl2jni/app/ndk/: NDKApplication.java
app/src/main/java/com/android/gl2jni/data/: AndroidPlatformData.java  RawData.java  RawPixelImage.java
app/src/main/java/com/android/gl2jni/egl/: EGLDevice.java  EGLManager.java
app/src/main/java/com/android/gl2jni/util/: ES20.java
app/src/main/res/layout/: activity_menu.xml
app/src/main/res/values/: strings.xml
